--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,15 +1,17 @@
-site_name: python_project_template
-site_url: https://chaitu-ycr.github.io/python_project_template/
-site_description: "My Python Projects Template"
+site_name: kmtronic_usb_relay
+site_url: https://chaitu-ycr.github.io/kmtronic_usb_relay/
+site_description: "Python library for KMTronic USB Relay"
 site_author: chaitu-ycr
 
-repo_name: chaitu-ycr/python_project_template
-repo_url: https://github.com/chaitu-ycr/python_project_template
+repo_name: ""
+repo_url: https://github.com/chaitu-ycr/kmtronic_usb_relay
 edit_uri: blob/main/docs/
 
 nav:
   - Overview: index.md
-  - src_manual: src_manual.md
+  - Src Manual:
+    - kmtronic_usb_relay: kmtronic_usb_relay.md
+    - serial_com_utils: serial_com_utils.md
 
 plugins:
   - mkdocstrings:
