--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,21 @@
 [project]
-name = "python_project_template"
+name = "kmtronic_usb_relay"
 version = "0.1.1"
-description = "My Python Projects Template"
+description = "Python library for KMTronic USB Relay"
 license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.9, <=3.13"
 authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
-keywords = ["python", "template"]
+keywords = ["python", "KMTronic", "USB", "relay", "app"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: Microsoft :: Windows"
 ]
 dependencies = [
-    "requests"
+    "pyserial",
+    "customtkinter",
+    "fastapi[all]",
 ]
 
 [project.optional-dependencies]
@@ -32,9 +34,9 @@ dev = [
 ]
 
 [project.urls]
-homepage = "https://github.com/chaitu-ycr/python_project_template"
-repository = "https://github.com/chaitu-ycr/python_project_template"
-documentation = "https://chaitu-ycr.github.io/python_project_template/"
+homepage = "https://github.com/chaitu-ycr/kmtronic_usb_relay"
+repository = "https://github.com/chaitu-ycr/kmtronic_usb_relay"
+documentation = "https://chaitu-ycr.github.io/kmtronic_usb_relay/"
 
 [build-system]
 requires = ["uv_build"]
